# tennis_scheduler

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql
docs/: openapi.yaml
migrations/2025-03-08-212934_add_league_type/: down.sql  up.sql
migrations/2025-03-12-162304_add_notes_to_matches/: down.sql  up.sql
migrations/YYYYMMDDHHMMSS_add_league_role/: down.sql  up.sql
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/: appointments.rs  auth.rs  leagues.rs  matches.rs  mod.rs  players.rs
src/db/: mod.rs  models.rs  schema  schema.rs
tests/: README.md  auth_tests.rs  doubles_match_test.rs  fixed_match_tests.rs  integration_tests.rs  league_tests.rs  match_tests.rs  player_tests.rs  reject_match_test.rs  setup_test_db.rs  test_runner.rs
